# simpleeditor

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 15.js  16.js  3.html  555.html  555.json  DiamondScene.tsx  clang-format.js  clang-format.wasm  codepage_gen.html  custom-dialog.js  f.html  g.snippet  g.txt  gc.snippet  gc.txt  gi2.txt  glsl.js  gtext.txt  index.css  index.html  index.js  javascript.js  log.html  shadertoy.html  shared.js  size.txt  snippet.html  snippet.js  svg.css  svg.html  svg.js  svgviewer.css  svgviewer.html  svgviewer.js  test.html  tg.txt  three.js.html  three.snippet  utils.js  video.txt
app/src/main/assets/Diamond/: diamond.json  diamondInner.json  diamondOuter.json  index.html  redCloth.json
app/src/main/assets/ShaderToy/: fragment.glsl  index.html  t.html  vertex.glsl
app/src/main/java/psycho/euphoria/editor/: AppService.java  CustomWebChromeClient.java  CustomWebViewClient.java  MainActivity.java  PublicFileProvider.java  Shared.java  WebAppInterface.java
app/src/main/jni/: CMakeLists.txt  httplib.cc  httplib.h  md4c-html.c  nativelib.cpp  server.cpp  server.h  server_utils.cpp  server_utils.h  shared.cpp  shared.h
app/src/main/jni/zipper/: CMakeLists.txt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
